--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -1,3 +1,12 @@
 <div class="menu">
-  hello
+  <nav>
+    <ul>
+      <li class="active"><a href="#">Главная</a></li>
+      <li><a href="#">О компании</a></li>
+      <li><a href="#">Наши работы</a></li>
+      <li><a href="#">Отзывы</a></li>
+      <li><a href="#">Статьи</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+  </nav>
 </div>
