--- a/src/assets/scss/blocks/menu.scss
+++ b/src/assets/scss/blocks/menu.scss
@@ -1,17 +1,17 @@
 .menu {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  transform: translateX(100%);
-  height: 100%;
-  width: 30%;
-  background-color: lightblue;
-  transition: all 1s ease;
-  display: none;
-  @include breakpoint($xl-bp) {
-    display: block;
-    height: 100vh;
+
+  nav {
+    ul {
+      display: flex;
+      gap: 4rem;
+      flex-wrap: wrap;
+
+      padding-left: 3rem;
+    }
+
+    .active {
+      font-weight: 700;
+    }
   }
 }
 
@@ -42,34 +42,39 @@
   z-index: 4;
   display: none;
   position: relative;
+
   .burger-button-close {
+
     #first-line-burger,
     #second-line-burger,
     #third-line-burger {
-        width: 100%;
-        height: 0.2rem;
-        border-radius: 0.1rem;
-        background-color: black;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%);
-        transform-origin: center center;
-        transition: transform 0.4s ease, opacity 0.4s ease;
+      width: 100%;
+      height: 0.2rem;
+      border-radius: 0.1rem;
+      background-color: black;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%);
+      transform-origin: center center;
+      transition: transform 0.4s ease, opacity 0.4s ease;
     }
 
     #first-line-burger {
-        top: 0%;
+      top: 0%;
     }
+
     #third-line-burger {
-        top: unset;
-        bottom: 0%;
+      top: unset;
+      bottom: 0%;
     }
   }
+
   @include breakpoint($xl-bp) {
     display: block;
     margin-left: 3rem;
   }
+
   @include breakpoint($sm-bp) {
     margin-left: 0;
     width: 2rem;
@@ -85,10 +90,12 @@
       top: 50%;
       transform: translateX(-50%) rotate(45deg);
     }
+
     #second-line-burger {
       transform: translateX(100%);
       opacity: 0;
     }
+
     #third-line-burger {
       top: 50%;
       bottom: 0;
@@ -98,9 +105,7 @@
 }
 
 
-.menu-button--active {
-
-}
+.menu-button--active {}
 
 .overlay {
   position: absolute;
