--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,11 +1,27 @@
-<header class="header">
-  {{> menu}}
+<header class="header container">
 
   <button class="menu-button myclass">
     <span class="burger-button-close">
       <span id="first-line-burger"></span>
       <span id="second-line-burger"></span>
       <span id="third-line-burger"></span>
-  </span>
+    </span>
   </button>
+
+  <a href="#" class="header__logo">
+    <img src="./assets/images/logo/logo.png" alt="logo">
+  </a>
+
+  {{> menu}}
+
+  <div class="header__contacts">
+    <a href="#" class="telegram-contact">
+      <svg><use href='#telegramIcon'></use></svg>
+    </a>
+
+    <a href="tel:+79255179971">+7 (925) 517-99-71</a>
+  </div>
+
 </header>
+
+<div class="header-cork"></div>
