--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,31 @@
-<footer class="footer">
+<footer class="footer container">
+  <div class="footer-inner">
+    <nav>
+      <ul>
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">О компании</a></li>
+        <li><a href="#">Наши работы</a></li>
+        <li><a href="#">Отзывы</a></li>
+        <li><a href="#">Статьи</a></li>
+      </ul>
+    </nav>
 
+    <a href="#" class="footer__logo">
+      <img src="./assets/images/logo/logo.svg" alt="logo">
+    </a>
+
+    <ul class="footer-contacts">
+      <li>Москва, <br class="sm-block">ул. Новорязанская, <br>д. 26к1, Loft Factory</li>
+      <li><a href="tel:+79255179971" class="footer-tel">+7 (925) 517-99-71</a></li>
+      <li><a href="mailto:info@kondoor.ru">info@kondoor.ru</a></li>
+      <li>
+        <ul class="socials">
+          <li><a href="#"><svg><use href='#telegramIcon'></use></svg></a></li>
+          <li><a href="#"><svg><use href='#vkIcon'></use></svg></a></li>
+          <li><a href="#"><svg><use href='#whatsupIcon'></use></svg></a></li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+  <div class="footer-bot">Изображение от <a href="#"> Freepik</a></div>
 </footer>
