--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -1,3 +1,15 @@
+.sm-block {
+  display: none;
+  @include breakpoint($sm-bp) {
+    display: block;
+  }
+}
+.sm-hidden {
+  @include breakpoint($sm-bp) {
+    display: none;
+  }
+}
+
 .preview {
   position: relative;
   padding-top: 12.9rem;
@@ -8,10 +20,25 @@
   justify-content: center;
   flex-direction: column;
 
+  @include breakpoint($xl-bp) {
+    padding-top: 8.5rem;
+    padding-bottom: 8.5rem;
+  }
+  &>.about-text,
   &>h1,
   &>.page-button {
     position: relative;
     z-index: 1;
+    color: var(--white);
+  }
+
+  &.--about {
+    padding-top: 9.05rem;
+    padding-bottom: 9.25rem;
+    @include breakpoint($xl-bp) {
+      padding-top: 4.55rem;
+      padding-bottom: 4.55rem;
+    }
   }
 }
 
@@ -28,11 +55,19 @@
 .aboutBlock {
   padding-top: 8rem;
   padding-bottom: 8rem;
+
+  @include breakpoint($xl-bp) {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
 }
 
 .aboutBlock-desc {
   margin-top: 4rem;
   text-align: justify;
+  @include breakpoint($xl-bp) {
+    margin-top: 2rem;
+  }
 }
 
 .aboutBlock-wrapper {
@@ -40,6 +75,22 @@
   justify-content: space-between;
   align-items: flex-end;
   margin-top: 4rem;
+  @include breakpoint($xl-bp) {
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: 2rem;
+  }
+  @include breakpoint($sm-bp) {
+    .page-button {
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
+
+      font-size: 1.2rem;
+      line-height: 1.6rem;
+      font-weight: 700;
+      letter-spacing: normal;
+    }
+  }
 }
 
 .aboutBlock-list {
@@ -47,10 +98,28 @@
   gap: 2.8rem;
   flex-wrap: wrap;
   font-weight: 600;
-
+  @include breakpoint($xl-bp) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @include breakpoint($sm-bp) {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+  }
   li {
+    @include breakpoint($xl-bp) {
+      text-align: center;
+    }
+    @include breakpoint($sm-bp) {
+      &:nth-child(3) {
+        min-width: 9.6rem;
+      }
+    }
     &:nth-child(2) {
       padding-left: 0.6rem;
+      @include breakpoint($xl-bp) {
+        padding-left: 0;
+      }
     }
   }
 }
@@ -59,11 +128,27 @@
   font-size: 4.8rem;
   line-height: 6.53rem;
   font-weight: 700;
+  @include breakpoint($xl-bp) {
+    font-size: 2.4rem;
+    line-height: 3.2rem;
+    text-align: center;
+  }
 }
 
 .values {
   padding-top: 8rem;
   padding-bottom: 8rem;
+
+  @include breakpoint($xl-bp) {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
+  @include breakpoint($sm-bp) {
+    .h2 {
+      line-height: 2.2rem;
+    }
+  }
 }
 
 .values-list {
@@ -71,10 +156,21 @@
   margin-top: 8rem;
   justify-content: space-between;
   gap: 8rem;
-
+  @include breakpoint($xl-bp) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2.4rem;
+    row-gap: 3.3rem;
+    margin-top: 2rem;
+  }
   .img-contain {
     width: 6.7rem;
     height: 6.7rem;
+
+    @include breakpoint($sm-bp) {
+      width: 2.4rem;
+      height: 2.4rem;
+    }
   }
 
   li {
@@ -83,12 +179,49 @@
     align-items: center;
     gap: 2rem;
     text-align: center;
+    @include breakpoint($xl-bp) {
+      gap: 0.7rem;
+    }
+    @include breakpoint($sm-bp) {
+      &:nth-child(1) {
+        width: min-content;
+      }
+      &:nth-child(2) {
+        grid-column: 2 / 3;
+      }
+      &:nth-child(3) {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        width: min-content;
+      }
+
+      &:nth-child(4) {
+        grid-column: 2 / 2;
+        grid-row: 1 / 2;
+      }
+    }
   }
 }
 
 .works {
   padding-top: 8rem;
   padding-bottom: 8rem;
+  @include breakpoint($xl-bp) {
+    padding-top: 3.6rem;
+    padding-bottom: 3.6rem;
+  }
+
+  @include breakpoint($sm-bp) {
+    .page-button {
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
+
+      font-size: 1.2rem;
+      line-height: 1.6rem;
+      font-weight: 700;
+      letter-spacing: normal;
+    }
+  }
 }
 
 .justify-between {
@@ -100,24 +233,50 @@
 .works-swiper-wrapper {
   position: relative;
   margin-top: 2.5rem;
-
+  @include breakpoint($sm-bp) {
+    margin-top: 1.6rem;
+  }
   .arrow-button {
     position: absolute;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate3d(-50%, -50%, 0);
     left: -3rem;
     z-index: 1;
+    @include breakpoint($xl-bp) {
+      left: 0;
+    }
+
+
   }
 
+  .prev {
+    &:hover {
+      transform: translate3d(calc(-50% - 0.5rem), -50%, 0);
+    }
+  }
   .next {
     left: calc(100% + 3rem);
+    
+    @include breakpoint($xl-bp) {
+      left: 100%;
+    }
+    &:hover {
+      transform: translate3d(calc(-50% + 0.5rem), -50%, 0);
+    }
   }
+}
+
+.arrow-button {
+  transition: transform .3s;
 }
 
 .works-swiper {
   .swiper-slide {
     width: 58.1rem;
     margin-right: 2rem;
+    @include breakpoint($sm-bp) {
+      width:  32rem;
+    }
     &:nth-child(2n + 1) {
       ul {
         li {
@@ -128,6 +287,9 @@
               &::after {
                 background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 580 280' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M580 0H0V280H580V0ZM280.5 106V142.5H244V145.5H280.5V182H283.5V145.5H320V142.5H283.5V106H280.5Z' fill='%23131010' fill-opacity='0.8'/%3E%3C/svg%3E%0A");
                 background-size: 58rem 28rem;
+                @include breakpoint($sm-bp) {
+                  background-size: cover;
+                }
               }
             }
           }
@@ -142,6 +304,11 @@
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, 28rem);
       gap: 2rem;
+      @include breakpoint($sm-bp) {
+        grid-template-rows: repeat(2, 15.5rem);
+        grid-template-columns: repeat(2, 15.5rem);
+        gap: 1rem;
+      }
       li {
         position: relative;
         z-index: 1;
@@ -166,7 +333,11 @@
         font-size: 2.4rem;
         line-height: 3.2rem;
         text-transform: uppercase;
-
+        @include breakpoint($xl-bp) {
+          font-size: 1.4rem;
+          line-height: 1.9rem;
+          padding: 1rem 1.6rem;
+        }
         &:hover {
           &::after {
             opacity: 1;
@@ -192,6 +363,9 @@
           opacity: 0;
           z-index: -1;
           pointer-events: none;
+          @include breakpoint($sm-bp) {
+            background-size: cover;
+          }
         }
         
         &::before {
@@ -217,6 +391,10 @@
   height: 4.1rem;
   background-color: var(--white);
   border-radius: 100%;
+  @include breakpoint($xl-bp) {
+    width: 3.2rem;
+    height: 3.2rem;
+  }
   svg {
     width: 100%;
     height: 100%;
@@ -226,6 +404,10 @@
 .how {
   padding-top: 8rem;
   padding-bottom: 8rem;
+  @include breakpoint($xl-bp) {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
 }
 
 .how-list {
@@ -236,6 +418,17 @@
 
   margin-top: 4.5rem;
 
+  @include breakpoint($xl-bp) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    margin-top: 4rem;
+  }
+
+  @include breakpoint($sm-bp) {
+    grid-template-columns: repeat(1, 1fr);
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
   li {
     background-color: var(--white);
     color: var(--black);
@@ -245,6 +438,9 @@
     will-change: transform;
 
     position: relative;
+    @include breakpoint($xl-bp) {
+      transform: unset;
+    }
     &::before {
       content: '';
       position: absolute;
@@ -257,9 +453,15 @@
       pointer-events: none;
       transition: opacity .3s;
       will-change: opacity;
+      @include breakpoint($xl-bp) {
+        content: unset;
+      }
     }
     .img-cover {
       height: 25rem;
+      @include breakpoint($sm-bp) {
+        height: 12.5rem;
+      }
     }
     &:hover {
       transform: scale(1);
@@ -278,11 +480,20 @@
     text-align: center;
     font-weight: 600;
     text-transform: uppercase;
+    @include breakpoint($sm-bp) {
+      font-size: 1.2rem;
+      line-height: 1.6rem;
+      padding: 1rem 2rem;
+    }
 }
 
 .collabe {
   padding-top: 8rem;
   padding-bottom: 8rem;
+  @include breakpoint($xl-bp) {
+    padding-top: 3.4rem;
+    padding-bottom: 3.4rem;
+  }
 }
 
 .collabe-list {
@@ -292,17 +503,31 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 4.5rem;
   counter-reset: num;
+
+  @include breakpoint($xl-bp) {
+    grid-template-columns: repeat(1, 1fr);
+    margin-top: 2rem;
+  }
+  @include breakpoint($sm-bp) {
+    gap: 1.5rem;
+  }
   li {
     counter-increment: num;
     border: 0.1rem solid #201A1A;
     padding: 3rem 2.7rem;
-
+    @include breakpoint($xl-bp) {
+      padding: 1.5rem 2rem;
+    }
     &::before {
       content: counter(num, decimal-leading-zero);
 
       font-family: 'Garamond';
       font-size: 4.8rem;
       line-height: 2rem;
+      @include breakpoint($xl-bp) {
+        font-size: 3rem;
+        line-height: 3.3rem;
+      }
     }
   }
 }
@@ -313,19 +538,399 @@
   line-height: 2.8rem;
   margin-top: 1.5rem;
   text-transform: uppercase;
+  @include breakpoint($sm-bp) {
+    display: inline-block;
+    margin-top: 0;
+    margin-left: 0.8rem;
+    font-size: 1.4rem;
+    line-height: 1.9rem;
+    vertical-align: super;
+    position: relative;
+    top: 0.2rem;
+  }
 }
 
 .collabe-desc {
   font-size: 1.6rem;
   line-height: 2.8rem;
   margin-top: 1.5rem;
+  @include breakpoint($sm-bp) {
+    font-size: 1.4rem;
+    line-height: 2.8rem;
+    margin-top: 1rem;
+  }
 }
 
 .faq {
   padding-top: 8rem;
   padding-bottom: 8rem;
+  @include breakpoint($xl-bp) {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
 }
 
 .accordion-list {
   margin-top: 4rem;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 2rem;
+  column-gap: 2.3rem;
+
+  @include breakpoint($xl-bp) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
+
+.accordion {
+  border-bottom: 0.1rem solid var(--black);
+  border-top: 0.1rem solid var(--black);
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+  height: min-content; 
+  @include breakpoint($xl-bp) {
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+  }
+}
+.accordion-button {
+  font-family: 'Open Sans';
+  font-size: 2.4rem;
+  line-height: 2.8rem;
+  font-weight: 600;
+  letter-spacing: 0.001em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  transition: font-weight .4s ease-in-out;
+  position: relative;
+  @include breakpoint($xl-bp) {
+    font-size: 1.4rem;
+    line-height: 2.8rem;
+  }
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  &::after {
+    width: 3rem;
+    height: 3rem;
+    background-image: url("data:image/svg+xml,%3Csvg width='31' height='30' viewBox='0 0 31 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cmask id='mask0_739_627' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='31' height='30'%3E%3Crect x='0.5' width='30' height='30' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_739_627)'%3E%3Cpath d='M14.25 16.25H6.75V13.75H14.25V6.25H16.75V13.75H24.25V16.25H16.75V23.75H14.25V16.25Z' fill='white'/%3E%3C/g%3E%3C/svg%3E%0A");
+    background-size: contain;
+    background-repeat: no-repeat;
+    transition: transform .3s, filter .3s;
+    will-change: transform;
+    flex: 0 0 auto;
+    right: 0.5rem;
+    @include breakpoint($sm-bp) {
+      width: 2rem;
+      height: 2rem;
+      top: 0.5rem;
+      right: 0;
+    }
+  }
+  &::before {
+    width: 4rem;
+    height: 4rem;
+    background-color: var(--white);
+    top: -0.5rem;
+    border-radius: 100%;
+    opacity: 0;
+    transition: opacity .3s;
+    will-change: opacity;
+    @include breakpoint($sm-bp) {
+      width: 3rem;
+      height: 3rem;
+      top: 0;
+      right: -0.5rem;
+    }
+  }
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      &::before {
+        opacity: 1;
+      }
+      &::after {
+        filter: invert(1);
+      }
+    }
+  }
+
+  &.active {
+    &::after {
+      transform: rotate(45deg);
+    }
+    & + .accordion-block {
+      grid-template-rows: 1fr;
+
+      .accordion-inner {
+        padding-top: 2rem;
+        @include breakpoint($xl-bp) {
+          padding-top: 1.5rem;
+        }
+      }
+    }
+  }
+}
+.accordion-block {
+  display: grid;
+  grid-template-rows: 0fr;
+  transition: grid-template-rows .3s;
+}
+.accordion-inner {
+  overflow: hidden;
+  position: relative;
+  transition: padding .3s;
+
+  font-size: 2rem;
+  line-height: 2.8rem;
+  @include breakpoint($xl-bp) {
+    font-size: 1.4rem;
+    line-height: 1.9rem;
+  }
+}
+
+.callback {
+  display: grid;
+  grid-template-columns: 0.78fr 1fr;
+  height: 88.1rem;
+  align-items: center;
+  @include breakpoint($xl-bp) {
+    grid-template-columns: 1fr;
+    height: unset;
+  }
+  .img-cover {
+    width: 100%;
+    height: 100%;
+    @include breakpoint($xl-bp) {
+      display: none;
+    }
+  }
+}
+
+.callback-form {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  padding-left: 13rem;
+  @include breakpoint($xl-bp) {
+    padding-left: 4rem;
+  }
+
+  @include breakpoint($sm-bp) {
+    padding-left: 2.7rem;
+  }
+  form {
+    margin-top: 4rem;
+    @include breakpoint($xl-bp) {
+      margin-top: 2rem;
+    }
+  }
+}
+
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+
+  letter-spacing: 0.005em;
+  @include breakpoint($xl-bp) {
+    font-size: 1.4rem;
+  }
+  textarea,
+  input {
+    border: 0.1rem solid var(--black);
+    padding: 1rem 0.5rem;
+
+    font-family: 'Open Sans';
+    @include breakpoint($sm-bp) {
+      font-size: 1.2rem;
+      line-height: 2.4rem;
+      padding: 0.5rem;
+    }
+    &::placeholder {
+      font-family: 'Open Sans';
+    }
+  }
+
+  textarea {
+    height: 14.7rem;
+    resize: none;
+  }
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  @include breakpoint($sm-bp) {
+    gap: 1.5rem;
+  }
+}
+
+.input-file-container {
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  @include breakpoint($xl-bp) {
+    font-size: 1.4rem;
+  }
+}
+
+.input-file-trigger {
+  position: relative;
+  color: #938F96;
+
+  cursor: pointer;
+
+  margin-top: 0.5rem;
+
+  display: inline-flex;
+  align-items: center;
+  @include breakpoint($sm-bp) {
+    font-size: 1.2rem;
+    line-height: 1.63rem;
+  }
+  &::after {
+    content: '';
+    width: 2.4rem;
+    height: 2.4rem;
+    display: block;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='25' viewBox='0 0 24 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cmask id='mask0_475_9522' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='24' height='25'%3E%3Crect y='0.5' width='24' height='24' fill='%23938F96'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_475_9522)'%3E%3Cpath d='M12.5 23.4817C10.9667 23.4817 9.66667 22.8955 8.6 21.7231C7.53333 20.5508 7 19.122 7 17.4367V5.89633C7 4.68734 7.39167 3.65237 8.175 2.79142C8.95833 1.93047 9.9 1.5 11 1.5C12.1 1.5 13.0417 1.93047 13.825 2.79142C14.6083 3.65237 15 4.68734 15 5.89633V16.3376C15 17.107 14.7583 17.7573 14.275 18.2885C13.7917 18.8197 13.2 19.0853 12.5 19.0853C11.8 19.0853 11.2083 18.8197 10.725 18.2885C10.2417 17.7573 10 17.107 10 16.3376V5.89633H11.5V16.3376C11.5 16.649 11.5958 16.9101 11.7875 17.1207C11.9792 17.3314 12.2167 17.4367 12.5 17.4367C12.7833 17.4367 13.0208 17.3314 13.2125 17.1207C13.4042 16.9101 13.5 16.649 13.5 16.3376V5.89633C13.5 5.12697 13.2583 4.47668 12.775 3.94546C12.2917 3.41424 11.7 3.14862 11 3.14862C10.3 3.14862 9.70833 3.41424 9.225 3.94546C8.74167 4.47668 8.5 5.12697 8.5 5.89633V17.4367C8.5 18.6457 8.89167 19.6807 9.675 20.5416C10.4583 21.4026 11.4 21.833 12.5 21.833C13.6 21.833 14.5417 21.4026 15.325 20.5416C16.1083 19.6807 16.5 18.6457 16.5 17.4367V5.89633H18V17.4367C18 19.122 17.4667 20.5508 16.4 21.7231C15.3333 22.8955 14.0333 23.4817 12.5 23.4817Z' fill='%23938F96'/%3E%3C/g%3E%3C/svg%3E%0A");
+    flex: 0 0 auto;
+
+    margin-left: 1.5rem;
+    display: inline-block;
+    @include breakpoint($xl-bp) {
+      width: 1.6rem;
+      height: 1.6rem;
+      margin-left: 0.5rem;
+    }
+  }
+}
+.file-return {
+  @include breakpoint($sm-bp) {
+    font-size: 1.2rem;
+    line-height: 1.63rem;
+  }
+}
+
+.input-file {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  position: relative;
+  font-size: 1.6rem;
+  line-height: 2.17rem;
+  font-weight: 600;
+  @include breakpoint($sm-bp) {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    gap: 1rem;
+  }
+  cursor: pointer;
+  input {
+    position: absolute;
+    top: 0;
+    left: .5rem;
+    width: 2.4rem;
+    height: 2.2rem;
+    opacity: 0;
+
+    &:checked + .checkbox {
+      &::after {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.checkbox {
+  width: 2.4rem;
+  height: 2.4rem;
+  position: relative;
+
+  &::before {
+    content: '';
+    width: 1.84rem;
+    height: 1.84rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 0.2rem solid var(--black);
+    border-radius: 0.2rem;
+    transition: border-color .3s;
+  }
+  &::after {
+    content: '';
+    width: 1rem;
+    height: 0.6rem;
+    border: 0.2rem solid var(--black);
+    border-top: 0;
+    border-right: 0;
+    position: absolute;
+    top: calc(50% - 0.2rem);
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+    opacity: 0;
+    transition: opacity .3s;
+    will-change: opacity;
+  }
+  &:hover {
+    &::before {
+      border-color: var(--yellow);
+    }
+  }
+}
+[data-aos^=fade][data-aos^=fade].submit-button {
+  transition: color .3s, background-color .3s, opacity .3s, transform .3s;
+}
+.submit-button {
+  background-color: var(--brown);
+  color: var(--white);
+
+  font-size: 1.8rem;
+  line-height: 2.45rem;
+  font-weight: 700;
+
+  padding: 1.5rem 3.5rem;
+  display: inline-block;
+  width: fit-content;
+  font-family: 'Open Sans';
+
+  letter-spacing: 0.01em;
+  border: 0.1rem solid var(--brown);
+  transition: color .3s, background-color .3s;
+  &:hover {
+    background-color: transparent;
+    color: var(--brown);
+  }
+  @include breakpoint($sm-bp) {
+    font-size: 1.4rem;
+    line-height: 1.9rem;
+    padding: 1rem 1.5rem;
+  }
+}
+
+
+
