--- a/src/assets/scss/blocks/menu.scss
+++ b/src/assets/scss/blocks/menu.scss
@@ -1,5 +1,7 @@
 .menu {
-
+  @include breakpoint($xl-bp) {
+    z-index: -1;
+  }
   nav {
     ul {
       display: flex;
@@ -7,41 +9,53 @@
       flex-wrap: wrap;
 
       padding-left: 3rem;
+      @include breakpoint($xl-bp) {
+        flex-direction: column;
+        align-items: center;
+        padding-left: 0;
+        gap: 1.5rem;
+        padding-left: 2.75rem;
+        padding-right: 2.75rem;
+        padding-top: 3rem;
+        padding-bottom: 2rem;
+      }
     }
 
     .active {
       font-weight: 700;
     }
   }
+
+  @include breakpoint($xl-bp) {
+    transition: transform .3s;
+    will-change: transform;
+    position: absolute;
+    top: 9.2rem;
+    left: 0;
+    transform: translate3d(0, calc(-100% - 9.2rem), 0);
+    background-color: var(--black);
+    width: 100%;
+  }
+  @include breakpoint($sm-bp) {
+    top: 7.2rem;
+  }
 }
 
 .menu--open {
-  transform: translateX(0);
+  transform: translate3d(0, 0, 0);
 }
 
-// .menu-button {
-//   width: 30px;
-//   height: 30px;
-
-//   background-color: red;
-
-//   position: absolute;
-
-//   right: 0;
-//   top: 0;
-
-//   z-index: 3;
-// }
-
 .menu-button {
-  width: 4rem;
-  height: 3.4rem;
+  width: 2.2rem;
+  height: 1.5rem;
   background-color: transparent;
   border: 0;
 
   z-index: 4;
   display: none;
   position: relative;
+  flex: 0 0 auto;
+  margin-left: 0.5rem;
 
   .burger-button-close {
 
@@ -51,13 +65,16 @@
       width: 100%;
       height: 0.2rem;
       border-radius: 0.1rem;
-      background-color: black;
+      background-color: var(--white);
       position: absolute;
-      top: 50%;
+      top: 45%;
       left: 50%;
       transform: translateX(-50%);
       transform-origin: center center;
-      transition: transform 0.4s ease, opacity 0.4s ease;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+      @include breakpoint($sm-bp) {
+        top: 39%;
+      }
     }
 
     #first-line-burger {
@@ -72,14 +89,10 @@
 
   @include breakpoint($xl-bp) {
     display: block;
-    margin-left: 3rem;
   }
-
   @include breakpoint($sm-bp) {
-    margin-left: 0;
-    width: 2rem;
-    height: 2rem;
-    margin-right: 0.5rem;
+    width: 1.8rem;
+    height: 1.2rem;
   }
 }
 
@@ -104,12 +117,11 @@
   }
 }
 
-
-.menu-button--active {}
-
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
+  z-index: 5;
   width: 100%;
   height: 100%;
+  background-color: rgba($color: #000000, $alpha: 0.3);
 }
