--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,7 +10,11 @@
 
 html {
   box-sizing: border-box;
-  font-size: calc(100vw / 1440 * 10);
+  font-size: calc(100vw / 1920 * 10);
+
+  @include breakpoint($cos-bp) {
+    font-size: calc(100vw / 1440 * 10);
+  }
 
   @include breakpoint($xl-bp) {
     font-size: calc(100vw / 768 * 10);
@@ -21,6 +25,195 @@ html {
   }
 }
 
+::-webkit-scrollbar {
+  width: 0;
+}
+
+#loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+
+#loader-wrapper .loader-section {
+  position: fixed;
+  top: 0;
+  width: 51%;
+  height: 100%;
+  background: #fff;
+  z-index: 1000;
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+}
+
+#loader-wrapper .loader-section.section-left {
+  left: 0;
+
+  p {
+    right: 4rem;
+    @include breakpoint($cos-bp) {
+      right: 3rem;
+    }
+    @include breakpoint($xl-bp) {
+      right: 1rem;
+    }
+  }
+}
+
+#loader-wrapper .loader-section.section-right {
+  right: 0;
+
+  p {
+    left: 0;
+  }
+}
+
+#loader-wrapper .loader-section {
+  p {
+    position: absolute;
+    top: calc(50% + 12rem);
+    font-family: Garamond;
+    font-weight: 400;
+    font-size: 4.8rem;
+    line-height: 6.4rem;
+    text-transform: uppercase;
+
+    @include breakpoint($xl-bp) {
+      font-size: 2.4rem;
+      line-height: 2.7rem;
+      font-weight: bold;
+
+    }
+  }
+}
+
+#loader {
+  display: block;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  width: 20rem;
+  height: 20rem;
+  margin: -10rem 0 0 -10rem;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  border: 0.3rem solid transparent;
+  border-top-color: var(--brown);
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  z-index: 1001;
+  will-change: opacity, transform;
+}
+
+#loader:before {
+  top: 0.5rem;
+  left: 0.5rem;
+  right: 0.5rem;
+  bottom: 0.5rem;
+  -webkit-animation: spin 3s linear infinite;
+  animation: spin 3s linear infinite;
+}
+
+#loader:before,
+#loader:after {
+  content: "";
+  position: absolute;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  border: 0.3rem solid transparent;
+  border-top-color: var(--brown);
+}
+
+#loader:after {
+  top: 1.5rem;
+  left: 1.5rem;
+  right: 1.5rem;
+  bottom: 1.5rem;
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 1.5s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.loaded #loader-wrapper {
+  visibility: hidden;
+  -webkit-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  transform: translateY(-100%);
+  -webkit-transition: all 0.3s 1s ease-out;
+  transition: all 0.3s 1s ease-out;
+}
+
+.loaded #loader-wrapper .loader-section.section-left {
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+  -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.loaded #loader-wrapper .loader-section.section-right {
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+  -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.loaded #loader {
+  opacity: 0;
+  transform: scale(1.5);
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.loaded {
+  .onloadtext,
+  .h1 {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+
+  .onloadanim {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.onloadanim {
+  will-change: opacity, transform;
+  opacity: 0;
+  transform: scale(0.5);
+  transition: transform .3s ease 1s, opacity .3s ease 1s;
+}
 
 
 *,
@@ -34,6 +227,12 @@ body {
   font-size: 2rem;
   line-height: 2.72rem;
   font-weight: 400;
+  background-color: var(--white);
+
+  @include breakpoint($sm-bp) {
+    font-size: 1.4rem;
+    line-height: 1.9rem;
+  }
 }
 
 img {
@@ -45,6 +244,168 @@ svg {
   transition: all 0.1s linear;
 }
 
+
+.text-center {
+  text-align: center;
+}
+
+.dark {
+  color: var(--white);
+  background-color: var(--brown);
+
+  .page-button {
+    border-color: var(--white);
+
+    &:hover {
+      background-color: var(--white);
+      color: var(--brown);
+    }
+  }
+
+  .accordion-button {
+    color: var(--white);
+  }
+
+  .accordion {
+    border-color: var(--white);
+  }
+}
+
+.dark + .dark {
+  margin-top: -0.1rem;
+}
+
+.page-button.onloadanim {
+  transition: background-color .3s, color .3s, transform .3s ease 1.1s, opacity .3s ease 1.1s;
+}
+
+[data-aos^=fade][data-aos^=fade].page-button {
+  transition: color .3s, background-color .3s, opacity .3s, transform .3s;
+}
+
+.page-button {
+  background-color: transparent;
+  border: 0.1rem solid var(--brown);
+  padding: 1.4rem 3.4rem;
+
+  font-size: 1.8rem;
+  line-height: 2.45rem;
+  font-weight: 700;
+
+  transition: background-color .3s, color .3s;
+  font-family: 'Open Sans';
+  @include breakpoint($sm-bp) {
+    font-size: 1.4rem;
+    line-height: 1.9rem;
+    font-weight: 600;
+    padding: 1rem 2rem;
+    letter-spacing: 0.03em;
+  }
+
+  &:hover {
+    background-color: var(--brown);
+    color: var(--white);
+  }
+}
+
+h1,
+.h1 {
+  font-family: Garamond;
+  font-size: 4.8rem;
+  font-weight: 400;
+  line-height: 6.4rem;
+  text-transform: uppercase;
+  will-change: opacity, transform;
+  opacity: 0;
+  transform: translate3d(0, 5rem, 0);
+  transition: 1.3s transform .3s, 1.3s opacity .3s;
+
+  @include breakpoint($xl-bp) {
+    font-size: 2.4rem;
+    line-height: 2.7rem;
+  }
+}
+
+.onloadtext {
+  will-change: opacity, transform;
+  opacity: 0;
+  transform: translate3d(0, 5rem, 0);
+  transition: 1.6s transform .3s, 1.6s opacity .3s;
+}
+
+h2,
+.h2 {
+  font-family: Garamond;
+  font-size: 3.6rem;
+  font-weight: 400;
+  line-height: 2.8rem;
+  text-transform: uppercase;
+
+  @include breakpoint($xl-bp) {
+    font-size: 2rem;
+    line-height: 2.8rem;
+  }
+}
+
+.max-w-853 {
+  max-width: 85.3rem;
+  margin: 0 auto;
+}
+
+.mt-60 {
+  margin-top: 6rem;
+
+  @include breakpoint($sm-bp) {
+    margin-top: 2.5rem;
+  }
+}
+.mt-25 {
+  margin-top: 2.5rem;
+  @include breakpoint($sm-bp) {
+    margin-top: 1rem;
+  }
+}
+
+.img-contain {
+  display: block;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+
+.img-cover {
+  display: block;
+  position: relative;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.container {
+  padding-left: 37rem;
+  padding-right: 37rem;
+  @include breakpoint($cos-bp) {
+    padding-right: 13rem;
+    padding-left: 13rem;
+  }
+
+  @include breakpoint($xl-bp) {
+    padding-right: 4rem;
+    padding-left: 4rem;
+  }
+
+  @include breakpoint($sm-bp) {
+    padding-right: 2.7rem;
+    padding-left: 2.7rem;
+  }
+}
 
 /* Blocks */
 
@@ -61,33 +422,14 @@ svg {
   display: block;
 }
 
-.container {
-  padding-right: 13rem;
-  padding-left: 13rem;
-  @include breakpoint($xl-bp) {
-    padding-right: 2rem;
-    padding-left: 2rem;
-  }
-  @include breakpoint($sm-bp) {
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
-  }
-}
+
 
 .img-contain {
   display: block;
+
   img {
     width: 100%;
     height: 100%;
     object-fit: contain;
-  }
-}
-.img-cover {
-  display: block;
-  overflow: hidden;
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
 }
