--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -1,9 +1,11 @@
 .sm-block {
   display: none;
+
   @include breakpoint($sm-bp) {
     display: block;
   }
 }
+
 .sm-hidden {
   @include breakpoint($sm-bp) {
     display: none;
@@ -24,9 +26,12 @@
     padding-top: 8.5rem;
     padding-bottom: 8.5rem;
   }
+
+  &>.ourWork-text,
   &>.about-text,
   &>h1,
-  &>.page-button {
+  &>.page-button,
+  &>.ourWorks-arrow {
     position: relative;
     z-index: 1;
     color: var(--white);
@@ -35,9 +40,54 @@
   &.--about {
     padding-top: 9.05rem;
     padding-bottom: 9.25rem;
+
     @include breakpoint($xl-bp) {
       padding-top: 4.55rem;
       padding-bottom: 4.55rem;
+    }
+  }
+
+  &.--ourWorks {
+    padding-top: 10.5rem;
+    padding-bottom: 8rem;
+    @include breakpoint($xl-bp) {
+      padding-top: 6.4rem;
+      padding-bottom: 3.9rem;
+    }
+    @include breakpoint($sm-bp) {
+      .h1 {
+        max-width: 23.3rem;
+      }
+      .about-text {
+        margin-top: 2.5rem;
+      }
+    }
+  }
+
+  &.--ourWork {
+    @include breakpoint($sm-bp) {
+      padding-bottom: 5.5rem;
+    }
+    & > * {
+      max-width: 101.1rem;
+      @include breakpoint($sm-bp) {
+        max-width: 25.7rem;
+      }
+    }
+  }
+
+  &.--reviews {
+    padding-top: 17.3rem;
+    padding-bottom: 17.3rem;
+    @include breakpoint($xl-bp) {
+      padding-top: 3.6rem;
+      padding-bottom: 3.6rem;
+    }
+    @include breakpoint($sm-bp) {
+      .ourWorks-arrow {
+        margin-top: 1rem;
+      }
+
     }
   }
 }
@@ -50,6 +100,9 @@
   height: 100%;
   object-fit: cover;
   z-index: 0;
+  @include breakpoint($sm-bp) {
+    object-position: top;
+  }
 }
 
 .aboutBlock {
@@ -65,6 +118,7 @@
 .aboutBlock-desc {
   margin-top: 4rem;
   text-align: justify;
+
   @include breakpoint($xl-bp) {
     margin-top: 2rem;
   }
@@ -75,11 +129,13 @@
   justify-content: space-between;
   align-items: flex-end;
   margin-top: 4rem;
+
   @include breakpoint($xl-bp) {
     flex-direction: column;
     gap: 2rem;
     margin-top: 2rem;
   }
+
   @include breakpoint($sm-bp) {
     .page-button {
       padding-left: 1.5rem;
@@ -98,25 +154,31 @@
   gap: 2.8rem;
   flex-wrap: wrap;
   font-weight: 600;
+
   @include breakpoint($xl-bp) {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
+
   @include breakpoint($sm-bp) {
     font-size: 1.2rem;
     line-height: 1.6rem;
   }
+
   li {
     @include breakpoint($xl-bp) {
       text-align: center;
     }
+
     @include breakpoint($sm-bp) {
       &:nth-child(3) {
         min-width: 9.6rem;
       }
     }
+
     &:nth-child(2) {
       padding-left: 0.6rem;
+
       @include breakpoint($xl-bp) {
         padding-left: 0;
       }
@@ -128,6 +190,7 @@
   font-size: 4.8rem;
   line-height: 6.53rem;
   font-weight: 700;
+
   @include breakpoint($xl-bp) {
     font-size: 2.4rem;
     line-height: 3.2rem;
@@ -156,6 +219,7 @@
   margin-top: 8rem;
   justify-content: space-between;
   gap: 8rem;
+
   @include breakpoint($xl-bp) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -163,6 +227,7 @@
     row-gap: 3.3rem;
     margin-top: 2rem;
   }
+
   .img-contain {
     width: 6.7rem;
     height: 6.7rem;
@@ -179,16 +244,20 @@
     align-items: center;
     gap: 2rem;
     text-align: center;
+
     @include breakpoint($xl-bp) {
       gap: 0.7rem;
     }
+
     @include breakpoint($sm-bp) {
       &:nth-child(1) {
         width: min-content;
       }
+
       &:nth-child(2) {
         grid-column: 2 / 3;
       }
+
       &:nth-child(3) {
         grid-column: 1 / 2;
         grid-row: 2 / 3;
@@ -206,6 +275,7 @@
 .works {
   padding-top: 8rem;
   padding-bottom: 8rem;
+
   @include breakpoint($xl-bp) {
     padding-top: 3.6rem;
     padding-bottom: 3.6rem;
@@ -233,15 +303,18 @@
 .works-swiper-wrapper {
   position: relative;
   margin-top: 2.5rem;
+
   @include breakpoint($sm-bp) {
     margin-top: 1.6rem;
   }
+
   .arrow-button {
     position: absolute;
     top: 50%;
     transform: translate3d(-50%, -50%, 0);
     left: -3rem;
     z-index: 1;
+
     @include breakpoint($xl-bp) {
       left: 0;
     }
@@ -254,12 +327,14 @@
       transform: translate3d(calc(-50% - 0.5rem), -50%, 0);
     }
   }
+
   .next {
     left: calc(100% + 3rem);
-    
+
     @include breakpoint($xl-bp) {
       left: 100%;
     }
+
     &:hover {
       transform: translate3d(calc(-50% + 0.5rem), -50%, 0);
     }
@@ -274,9 +349,11 @@
   .swiper-slide {
     width: 58.1rem;
     margin-right: 2rem;
+
     @include breakpoint($sm-bp) {
-      width:  32rem;
+      width: 32rem;
     }
+
     &:nth-child(2n + 1) {
       ul {
         li {
@@ -287,28 +364,33 @@
               &::after {
                 background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 580 280' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M580 0H0V280H580V0ZM280.5 106V142.5H244V145.5H280.5V182H283.5V145.5H320V142.5H283.5V106H280.5Z' fill='%23131010' fill-opacity='0.8'/%3E%3C/svg%3E%0A");
                 background-size: 58rem 28rem;
+
                 @include breakpoint($sm-bp) {
                   background-size: cover;
                 }
               }
             }
           }
+
           &:nth-child(2) {
             grid-row: 1 span;
           }
         }
       }
     }
+
     ul {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, 28rem);
       gap: 2rem;
+
       @include breakpoint($sm-bp) {
         grid-template-rows: repeat(2, 15.5rem);
         grid-template-columns: repeat(2, 15.5rem);
         gap: 1rem;
       }
+
       li {
         position: relative;
         z-index: 1;
@@ -318,10 +400,12 @@
         &:first-child {
           grid-column: 1 span;
         }
+
         &:nth-child(2) {
           grid-row: 2 span;
         }
       }
+
       a {
         width: 100%;
         height: 100%;
@@ -333,15 +417,18 @@
         font-size: 2.4rem;
         line-height: 3.2rem;
         text-transform: uppercase;
+
         @include breakpoint($xl-bp) {
           font-size: 1.4rem;
           line-height: 1.9rem;
           padding: 1rem 1.6rem;
         }
+
         &:hover {
           &::after {
             opacity: 1;
           }
+
           &::before {
             opacity: 0;
           }
@@ -363,11 +450,12 @@
           opacity: 0;
           z-index: -1;
           pointer-events: none;
+
           @include breakpoint($sm-bp) {
             background-size: cover;
           }
         }
-        
+
         &::before {
           content: '';
           width: 100%;
@@ -391,10 +479,12 @@
   height: 4.1rem;
   background-color: var(--white);
   border-radius: 100%;
+
   @include breakpoint($xl-bp) {
     width: 3.2rem;
     height: 3.2rem;
   }
+
   svg {
     width: 100%;
     height: 100%;
@@ -404,6 +494,7 @@
 .how {
   padding-top: 8rem;
   padding-bottom: 8rem;
+
   @include breakpoint($xl-bp) {
     padding-top: 4rem;
     padding-bottom: 4rem;
@@ -429,6 +520,7 @@
     padding-left: 2rem;
     padding-right: 2rem;
   }
+
   li {
     background-color: var(--white);
     color: var(--black);
@@ -438,9 +530,11 @@
     will-change: transform;
 
     position: relative;
+
     @include breakpoint($xl-bp) {
       transform: unset;
     }
+
     &::before {
       content: '';
       position: absolute;
@@ -453,18 +547,23 @@
       pointer-events: none;
       transition: opacity .3s;
       will-change: opacity;
+
       @include breakpoint($xl-bp) {
         content: unset;
       }
     }
+
     .img-cover {
       height: 25rem;
+
       @include breakpoint($sm-bp) {
         height: 12.5rem;
       }
     }
+
     &:hover {
       transform: scale(1);
+
       &::before {
         opacity: 0;
       }
@@ -473,23 +572,25 @@
 }
 
 .how-subtitle {
-    padding: 2rem 2.4rem 1.4rem;
+  padding: 2rem 2.4rem 1.4rem;
 
-    font-size: 2.4rem;
-    line-height: 3.2rem;
-    text-align: center;
-    font-weight: 600;
-    text-transform: uppercase;
-    @include breakpoint($sm-bp) {
-      font-size: 1.2rem;
-      line-height: 1.6rem;
-      padding: 1rem 2rem;
-    }
+  font-size: 2.4rem;
+  line-height: 3.2rem;
+  text-align: center;
+  font-weight: 600;
+  text-transform: uppercase;
+
+  @include breakpoint($sm-bp) {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    padding: 1rem 2rem;
+  }
 }
 
 .collabe {
   padding-top: 8rem;
   padding-bottom: 8rem;
+
   @include breakpoint($xl-bp) {
     padding-top: 3.4rem;
     padding-bottom: 3.4rem;
@@ -508,22 +609,27 @@
     grid-template-columns: repeat(1, 1fr);
     margin-top: 2rem;
   }
+
   @include breakpoint($sm-bp) {
     gap: 1.5rem;
   }
+
   li {
     counter-increment: num;
     border: 0.1rem solid #201A1A;
     padding: 3rem 2.7rem;
+
     @include breakpoint($xl-bp) {
       padding: 1.5rem 2rem;
     }
+
     &::before {
       content: counter(num, decimal-leading-zero);
 
       font-family: 'Garamond';
       font-size: 4.8rem;
       line-height: 2rem;
+
       @include breakpoint($xl-bp) {
         font-size: 3rem;
         line-height: 3.3rem;
@@ -538,6 +644,7 @@
   line-height: 2.8rem;
   margin-top: 1.5rem;
   text-transform: uppercase;
+
   @include breakpoint($sm-bp) {
     display: inline-block;
     margin-top: 0;
@@ -554,6 +661,7 @@
   font-size: 1.6rem;
   line-height: 2.8rem;
   margin-top: 1.5rem;
+
   @include breakpoint($sm-bp) {
     font-size: 1.4rem;
     line-height: 2.8rem;
@@ -564,6 +672,7 @@
 .faq {
   padding-top: 8rem;
   padding-bottom: 8rem;
+
   @include breakpoint($xl-bp) {
     padding-top: 4rem;
     padding-bottom: 4rem;
@@ -588,12 +697,14 @@
   border-top: 0.1rem solid var(--black);
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
-  height: min-content; 
+  height: min-content;
+
   @include breakpoint($xl-bp) {
     padding-top: 0.8rem;
     padding-bottom: 0.8rem;
   }
 }
+
 .accordion-button {
   font-family: 'Open Sans';
   font-size: 2.4rem;
@@ -606,6 +717,7 @@
   width: 100%;
   transition: font-weight .4s ease-in-out;
   position: relative;
+
   @include breakpoint($xl-bp) {
     font-size: 1.4rem;
     line-height: 2.8rem;
@@ -618,6 +730,7 @@
     top: 0;
     right: 0;
   }
+
   &::after {
     width: 3rem;
     height: 3rem;
@@ -628,6 +741,7 @@
     will-change: transform;
     flex: 0 0 auto;
     right: 0.5rem;
+
     @include breakpoint($sm-bp) {
       width: 2rem;
       height: 2rem;
@@ -635,6 +749,7 @@
       right: 0;
     }
   }
+
   &::before {
     width: 4rem;
     height: 4rem;
@@ -644,6 +759,7 @@
     opacity: 0;
     transition: opacity .3s;
     will-change: opacity;
+
     @include breakpoint($sm-bp) {
       width: 3rem;
       height: 3rem;
@@ -651,11 +767,13 @@
       right: -0.5rem;
     }
   }
+
   @media (hover: hover) and (pointer: fine) {
     &:hover {
       &::before {
         opacity: 1;
       }
+
       &::after {
         filter: invert(1);
       }
@@ -666,11 +784,13 @@
     &::after {
       transform: rotate(45deg);
     }
-    & + .accordion-block {
+
+    &+.accordion-block {
       grid-template-rows: 1fr;
 
       .accordion-inner {
         padding-top: 2rem;
+
         @include breakpoint($xl-bp) {
           padding-top: 1.5rem;
         }
@@ -678,11 +798,13 @@
     }
   }
 }
+
 .accordion-block {
   display: grid;
   grid-template-rows: 0fr;
   transition: grid-template-rows .3s;
 }
+
 .accordion-inner {
   overflow: hidden;
   position: relative;
@@ -690,6 +812,7 @@
 
   font-size: 2rem;
   line-height: 2.8rem;
+
   @include breakpoint($xl-bp) {
     font-size: 1.4rem;
     line-height: 1.9rem;
@@ -701,13 +824,16 @@
   grid-template-columns: 0.78fr 1fr;
   height: 88.1rem;
   align-items: center;
+
   @include breakpoint($xl-bp) {
     grid-template-columns: 1fr;
     height: unset;
   }
+
   .img-cover {
     width: 100%;
     height: 100%;
+
     @include breakpoint($xl-bp) {
       display: none;
     }
@@ -718,6 +844,7 @@
   padding-top: 4rem;
   padding-bottom: 4rem;
   padding-left: 13rem;
+
   @include breakpoint($xl-bp) {
     padding-left: 4rem;
   }
@@ -725,8 +852,10 @@
   @include breakpoint($sm-bp) {
     padding-left: 2.7rem;
   }
+
   form {
     margin-top: 4rem;
+
     @include breakpoint($xl-bp) {
       margin-top: 2rem;
     }
@@ -737,25 +866,30 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  
+
   font-size: 1.6rem;
   line-height: 2.4rem;
 
   letter-spacing: 0.005em;
+
   @include breakpoint($xl-bp) {
     font-size: 1.4rem;
   }
+
   textarea,
   input {
     border: 0.1rem solid var(--black);
     padding: 1rem 0.5rem;
 
     font-family: 'Open Sans';
+    background-color: var(--white);
+
     @include breakpoint($sm-bp) {
       font-size: 1.2rem;
       line-height: 2.4rem;
       padding: 0.5rem;
     }
+
     &::placeholder {
       font-family: 'Open Sans';
     }
@@ -771,6 +905,7 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
+
   @include breakpoint($sm-bp) {
     gap: 1.5rem;
   }
@@ -779,6 +914,7 @@
 .input-file-container {
   font-size: 1.6rem;
   line-height: 2.4rem;
+
   @include breakpoint($xl-bp) {
     font-size: 1.4rem;
   }
@@ -794,10 +930,12 @@
 
   display: inline-flex;
   align-items: center;
+
   @include breakpoint($sm-bp) {
     font-size: 1.2rem;
     line-height: 1.63rem;
   }
+
   &::after {
     content: '';
     width: 2.4rem;
@@ -810,6 +948,7 @@
 
     margin-left: 1.5rem;
     display: inline-block;
+
     @include breakpoint($xl-bp) {
       width: 1.6rem;
       height: 1.6rem;
@@ -817,6 +956,7 @@
     }
   }
 }
+
 .file-return {
   @include breakpoint($sm-bp) {
     font-size: 1.2rem;
@@ -842,12 +982,15 @@
   font-size: 1.6rem;
   line-height: 2.17rem;
   font-weight: 600;
+
   @include breakpoint($sm-bp) {
     font-size: 1.2rem;
     line-height: 1.6rem;
     gap: 1rem;
   }
+
   cursor: pointer;
+
   input {
     position: absolute;
     top: 0;
@@ -856,7 +999,7 @@
     height: 2.2rem;
     opacity: 0;
 
-    &:checked + .checkbox {
+    &:checked+.checkbox {
       &::after {
         opacity: 1;
       }
@@ -881,6 +1024,7 @@
     border-radius: 0.2rem;
     transition: border-color .3s;
   }
+
   &::after {
     content: '';
     width: 1rem;
@@ -896,15 +1040,18 @@
     transition: opacity .3s;
     will-change: opacity;
   }
+
   &:hover {
     &::before {
       border-color: var(--yellow);
     }
   }
 }
+
 [data-aos^=fade][data-aos^=fade].submit-button {
   transition: color .3s, background-color .3s, opacity .3s, transform .3s;
 }
+
 .submit-button {
   background-color: var(--brown);
   color: var(--white);
@@ -921,10 +1068,12 @@
   letter-spacing: 0.01em;
   border: 0.1rem solid var(--brown);
   transition: color .3s, background-color .3s;
+
   &:hover {
     background-color: transparent;
     color: var(--brown);
   }
+
   @include breakpoint($sm-bp) {
     font-size: 1.4rem;
     line-height: 1.9rem;
@@ -932,5 +1081,117 @@
   }
 }
 
+.backToTop {
+  background-color: var(--white);
+  mix-blend-mode: difference;
+  width: 3.2rem;
+  height: 3.2rem;
+  display: block;
+  border-radius: 100%;
+  border: 0;
+  padding: 0;
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  transform: rotate(90deg) translate3d(calc(100% + 2rem), 0, 0);
+  z-index: 10;
+  transition: transform .3s;
+  box-shadow: 0 0 1rem rgba($color: #FFFFFF, $alpha: 0.3);
+  border: 0.1rem solid var(--black);
 
+  @include breakpoint($xl-bp) {
+    mix-blend-mode: normal;
+    border: 0.1rem solid var(--black);
+    right: 2.4rem;
+    bottom: 2;
+  }
 
+  @include breakpoint($sm-bp) {
+    transform: rotate(90deg) translate3d(calc(100% + 1.6rem), 0, 0);
+    right: 1.2rem;
+    bottom: 1.2rem;
+  }
+
+  &.--white {
+    background-color: var(--white);
+
+    svg {
+      fill: var(--green);
+    }
+  }
+
+  svg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    fill: var(--white);
+  }
+
+  &.active {
+    transform: translate3d(0, 0, 0) rotate(90deg);
+    pointer-events: all;
+  }
+}
+
+.feedback {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 4rem;
+
+  animation: fadeEffect .7s;
+}
+
+@keyframes fadeEffect {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.feedback-text {
+  font-size: 2.4rem;
+  line-height: 3rem;
+
+  @include breakpoint($xl-bp) {
+    font-size: 1.6rem;
+    line-height: 3rem;
+  }
+}
+
+.feedback-update {
+  font-weight: 600;
+  font-size: 2.2rem;
+  line-height: 3rem;
+
+  @include breakpoint($xl-bp) {
+    font-size: 1.4rem;
+    line-height: 3rem;
+  }
+}
+
+.feedback-socials {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+
+  a {
+    &:hover {
+      svg {
+        fill: var(--yellow);
+      }
+    }
+  }
+
+  svg {
+    width: 3rem;
+    height: 3rem;
+    fill: var(--black);
+  }
+}
