--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -35,11 +35,16 @@
         <!-- Footer -->
         {{> footer }}
 
+        <!-- Back to Top-->
+        <button class="backToTop">
+          <svg><use href='#prevIcon'></use></svg>
+        </button>
     </div>
 
     <!-- JS -->
     <script src="assets/js/vendor.js"></script>
     <script src="assets/js/app.js"></script>
+    <script src="assets/js/temp.js"></script>
     <script>
       window.onload = function () {
         document.documentElement.classList.add('loaded');
