--- a/src/partials/callback.html
+++ b/src/partials/callback.html
@@ -34,7 +34,7 @@
           Согласен на обработку персональных данных
         </label>
 
-        <button type="submit" class="submit-button" data-aos="fade-left">Отправить</button>
+        <button type="submit" class="submit-button">Отправить</button>
       </form>
     </div>
 
