--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,6 +7,7 @@
         <li><a href="#">Наши работы</a></li>
         <li><a href="#">Отзывы</a></li>
         <li><a href="#">Статьи</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
 
