--- a/src/assets/scss/blocks/about.scss
+++ b/src/assets/scss/blocks/about.scss
@@ -298,7 +298,7 @@
   display: flex;
   flex-direction: column;
   gap: 4rem;
-  margin-top: 4rem;
+  margin-top: 4.5rem;
   @include breakpoint($xl-bp) {
     gap: 2rem;
     margin-top: 2rem;
@@ -319,11 +319,11 @@
     .img-cover {
       flex: 0 0 auto;
       width: 51.3rem;
-      min-height: 37.6rem;
+      height: 31.6rem;
       @include breakpoint($xl-bp) {
         width: 100%;
         height: 18rem;
-        min-height: auto;
+        min-height: unset;
       }
     }
   }
