--- a/src/assets/scss/blocks/articles.scss
+++ b/src/assets/scss/blocks/articles.scss
@@ -1,42 +1,14 @@
-.articles-list {
-  .img-cover {
-    height: 44rem;
-    @include breakpoint($sm-bp) {
-      height: 22.1rem;
-    }
-  }
-  ul {
-    display: flex;
-    flex-direction: column;
-    gap: 3.85rem;
-    @include breakpoint($sm-bp) {
-      gap: 2rem;
-    }
-    & > li {
-      background-color: var(--white);
-      color: var(--black);
-      display: grid;
-      grid-template-columns: 51.3rem 1fr;
-      @include breakpoint($xl-bp) {
-        grid-template-columns: 1fr;
-      }
-    }
-  }
-}
+
 
 .articles-content {
   padding: 3.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+
   @include breakpoint($sm-bp) {
     padding: 1.5rem 2rem;
   }
-}
-
-.articles-right {
-  display: flex;
-  flex-direction: column-reverse;
 }
 
 .articles-title {
@@ -44,6 +16,7 @@
   line-height: 3.26rem;
   font-weight: 700;
   margin-bottom: 2rem;
+
   @include breakpoint($xl-bp) {
     font-size: 1.6rem;
     line-height: 2.1rem;
@@ -60,15 +33,23 @@
   width: max-content;
   margin-left: auto;
   transition: color .3s;
+
+  @include breakpoint($xl-bp) {
+    margin-right: 2rem;
+  }
+
   @include breakpoint($sm-bp) {
     margin-top: 1rem;
   }
+
   &:hover {
     color: var(--black);
+
     &::before {
       background-color: var(--black);
     }
   }
+
   &::before {
     content: '';
     width: 100%;
@@ -79,30 +60,37 @@
     background-color: #878787;
     transition: background-color .3s;
   }
+
   span {
     font-family: 'Open Sans';
     font-size: 1.6rem;
     line-height: 2.1rem;
+
     @include breakpoint($sm-bp) {
       font-size: 1.4rem;
       line-height: 1.8rem;
     }
   }
+
   .readLess {
     display: none;
   }
-  & + .articles-wrapper {
+
+  &+.articles-wrapper {
     overflow: hidden;
     max-height: 24.3rem;
     transition: max-height .3s;
+
     @include breakpoint($sm-bp) {
       max-height: 13.3rem;
     }
   }
+
   &.active {
     .readLess {
       display: block;
     }
+
     .readMore {
       display: none;
     }
@@ -111,4 +99,119 @@
 
 .articles-text {
   overflow: hidden;
+}
+
+.articles-list-float {
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 3.85rem;
+    @include breakpoint($sm-bp) {
+      gap: 2rem;
+    }
+  }
+}
+
+.articles-float {
+  padding: 3.5rem;
+  color: var(--black);
+  background-color: var(--white);
+  min-height: 51rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+  @include breakpoint($xl-bp) {
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 2rem;
+    min-height: unset;
+  }
+
+  .absolute {
+    position: absolute;
+    top: 3.5rem;
+    left: 3.5rem;
+    height: 44rem;
+    width: 51.3rem;
+
+    @include breakpoint($xl-bp) {
+      width: 100%;
+      position: static;
+
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    @include breakpoint($sm-bp) {
+      height: 21.2rem;
+    }
+  }
+
+  img {
+    float: left;
+    width: 51.3rem;
+    height: 44rem;
+    margin-right: 3.5rem;
+    margin-bottom: 3.5rem;
+  }
+}
+
+.articles-float-content {
+  overflow: hidden;
+  max-height: 29rem;
+  transition: max-height .3s;
+
+  @include breakpoint($xl-bp) {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 1.5rem;
+    max-height: 30rem;
+
+    .mobile-hidden {
+      display: none;
+    }
+  }
+
+  @include breakpoint($sm-bp) {
+    max-height: 18rem;
+  }
+
+  h2,
+  h3,
+  h4,
+  h5 {
+    margin-bottom: 2rem;
+    font-weight: 700;
+
+    @include breakpoint($xl-bp) {
+      margin-bottom: 1rem;
+    }
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  p {
+    margin-bottom: 2rem;
+
+    @include breakpoint($xl-bp) {
+      text-align: justify;
+      margin-top: 1rem;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
 }
