--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -36,6 +36,16 @@ html {
   width: 100%;
   height: 100%;
   z-index: 1000;
+  svg {
+    position: absolute;
+    top: 49%;
+    left: calc(50% - 0.1rem);
+    z-index: 100000;
+    transform: translate(-50%, -50%);
+    fill: transparent;
+    width: 8rem;
+    height: 10rem;
+  }
 }
 
 #loader-wrapper .loader-section {
@@ -191,7 +201,8 @@ html {
   transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-.loaded #loader {
+.loaded #loader,
+.loaded #loader-wrapper svg{
   opacity: 0;
   transform: scale(1.5);
   -webkit-transition: all 0.3s ease-out;
