--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -9,6 +9,7 @@
     <!-- Preloader -->
     <div id="loader-wrapper">
       <div id="loader"></div>
+      <!-- <svg><use href='#logoPreload'></use></svg> -->
       <div class="loader-section section-left">
         <p>KON</p>
       </div>
@@ -42,9 +43,9 @@
     </div>
 
     <!-- JS -->
-    <script src="assets/js/vendor.js"></script>
-    <script src="assets/js/app.js"></script>
-    <script src="assets/js/temp.js"></script>
+    <script src="assets/js/vendor.js?1"></script>
+    <script src="assets/js/app.js?2"></script>
+    <script src="assets/js/temp.js?1"></script>
     <script>
       window.onload = function () {
         document.documentElement.classList.add('loaded');
