--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 <title>{{ title }}</title>
 
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/style.css?5">
 <!-- CSS only -->
 
 
