--- a/src/assets/scss/blocks/menu.scss
+++ b/src/assets/scss/blocks/menu.scss
@@ -1,6 +1,15 @@
 .menu {
+  display: flex;
+  align-items: flex-end;
+  gap: 4rem;
   @include breakpoint($xl-bp) {
     z-index: -1;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 2.75rem;
+    padding-right: 2.75rem;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
   }
   nav {
     ul {
@@ -14,10 +23,6 @@
         align-items: center;
         padding-left: 0;
         gap: 1.5rem;
-        padding-left: 2.75rem;
-        padding-right: 2.75rem;
-        padding-top: 3rem;
-        padding-bottom: 2rem;
       }
     }
 
