--- a/src/partials/callback.html
+++ b/src/partials/callback.html
@@ -1,11 +1,10 @@
-<section class="callback">
-  <div class="img-cover">
-    <img src="./assets/images/main/callback/callback-1.jpg" alt="callback">
-  </div>
-
+<section class="regModal container modal-overlay opacity-0" hidden id="callback">
   <div class="callback-form container">
+    <button class="close-button">
+      <svg><use href='#closeIcon'></use></svg>
+    </button>
     <div class="form-wrapper">
-      <h2 class="h2" data-aos="fade-up" id="mainForm">Оставить заявку</h2>
+      <h2 class="h2" id="mainForm">Оставить заявку</h2>
       <form class="form" action="#" enctype="multipart/form-data">
         <div class="input-wrapper">
           <div>Имя*</div>
