--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header container">
+<header class="header header-container">
 
   <button class="menu-button">
     <span class="burger-button-close">
@@ -17,6 +17,10 @@
   <div class="header__contacts">
     <a href="#" class="telegram-contact">
       <svg><use href='#telegramIcon'></use></svg>
+    </a>
+
+    <a href="#" class="telegram-contact">
+      <svg><use href='#whatsupIcon'></use></svg>
     </a>
 
     <a class="header__tel" href="tel:+79255179971">
