--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -9,4 +9,7 @@
       <li><a href="#">Контакты</a></li>
     </ul>
   </nav>
+  <button class="header-btn" data-modal="#callback">
+    Оставить заявку
+  </button>
 </div>
