--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-
+  
   @include breakpoint($xl-bp) {
     padding-top: 8.5rem;
     padding-bottom: 8.5rem;
@@ -65,6 +65,8 @@
   }
 
   &.--ourWork {
+    padding-top: 4rem;
+    padding-bottom: 3rem;
     @include breakpoint($sm-bp) {
       padding-bottom: 5.5rem;
     }
@@ -103,6 +105,27 @@
   @include breakpoint($sm-bp) {
     object-position: top;
   }
+}
+.inline-block {
+  display: inline-block;
+}
+.mt-80 {
+  margin-top: 8rem;
+  @include breakpoint($xl-bp) {
+    margin-top: 4rem;
+  }
+}
+.mt-40 {
+  margin-top: 4rem;
+  @include breakpoint($xl-bp) {
+    margin-top: 2rem;
+  }
+}
+.flex {
+  display: flex;
+}
+.ml-auto { 
+  margin-left: auto;
 }
 
 .aboutBlock {
@@ -818,6 +841,21 @@
     line-height: 1.9rem;
   }
 }
+.opacity-0 {
+  opacity: 0;
+}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba($color: #000000, $alpha: 0.3);
+}
 
 .callback {
   display: grid;
@@ -839,12 +877,36 @@
     }
   }
 }
+.close-button {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  width: 2.4rem;
+  height: 2.4rem;
+  transition: opacity .3s;
 
+  &:hover {
+    opacity: 0.5;
+  }
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
+}
+.regModal {
+  transition: opacity .3s;
+}
 .callback-form {
-  padding-top: 4rem;
+  padding-top: 6rem;
   padding-bottom: 4rem;
-  padding-left: 13rem;
-
+  padding-left: 4rem;
+  padding-right: 4rem;
+  max-width: 65rem;
+  background-color: var(--white);
+  max-height: 100%;
+  overflow: auto;
+  position: relative;
   @include breakpoint($xl-bp) {
     padding-left: 4rem;
   }
@@ -982,7 +1044,7 @@
   font-size: 1.6rem;
   line-height: 2.17rem;
   font-weight: 600;
-
+  user-select: none;
   @include breakpoint($sm-bp) {
     font-size: 1.2rem;
     line-height: 1.6rem;
@@ -1207,4 +1269,56 @@
   &:hover {
     color: #878787;
   }
+}
+.delivery-list {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+.delivery-item {
+  padding-left: 3rem;
+  position: relative;
+  @include breakpoint($xl-bp) {
+    padding-left: 2rem;
+  }
+  &::before {
+    content: '';
+    width: 0.8rem;
+    height: 0.8rem;
+    border-radius: 100%;
+    background-color: var(--brown);
+    position: absolute;
+    top: 1rem;
+    left: 0.5rem;
+    @include breakpoint($sm-bp) {
+      width: 0.5rem;
+      height: 0.5rem;
+    }
+  } 
+}
+.delivery-sublist {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.delivery-subitem {
+  padding-left: 2rem;
+  position: relative;
+  @include breakpoint($xl-bp) {
+    padding-left: 1.5rem;
+  }
+  &::before {
+    content: '';
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 100%;
+    background-color: var(--brown);
+    position: absolute;
+    top: 1rem;
+    left: 0.5rem;
+    @include breakpoint($sm-bp) {
+      width: 0.4rem;
+      height: 0.4rem;
+    }
+  } 
 }
